# vfs-appointment-bot

./: .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  shell.nix
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/workflows/: build.yml  codeql.yml  dependency-review.yml  publish-testpypi.yml  publish.yml  scorecard.yml
config/: config.ini  logging.ini  vfs_urls.ini
vfs_appointment_bot/: _ConfigReader.py  _TelegramClient.py  _Timer.py  _TwilioClient.py  _VfsClient.py  main.py  vfs_appointment_bot.py
vfs_appointment_bot/notification/: email_client.py  notification_client.py  notification_client_factory.py  telegram_client.py  twilio_client.py
vfs_appointment_bot/utils/: config_reader.py  date_utils.py  timer.py
vfs_appointment_bot/vfs_bot/: vfs_bot.py  vfs_bot_de.py  vfs_bot_factory.py  vfs_bot_it.py
